[package]
name = "ddk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddk_types = { path = "../types" }
ddk_node = { path = "../node" }
ddk_authorization = { path = "../authorization" }
ddk_state = { path = "../state" }
ddk_wallet = { path = "../wallet" }
ddk_miner = { path = "../miner" }
ddk_net = { path = "../net" }
ddk_archive = { path = "../archive" }
ddk_mempool = { path = "../mempool" }
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
