[package]
name = "ddk"
version = "0.0.1"
edition = "2021"
keywords = ["blockchain", "bitcoin"]
repository = "https://github.com/LayerTwo-Labs/ddk"
description = "Drivechain Development Kit - a software framework for building BIP300 + BIP301 sidechains."
authors = [ "Nikita Chashchinskii" ]

[dependencies]
ddk_types = { path = "../types" }
ddk_node = { path = "../node" }
ddk_authorization = { path = "../authorization" }
ddk_state = { path = "../state" }
ddk_wallet = { path = "../wallet" }
ddk_miner = { path = "../miner" }
ddk_net = { path = "../net" }
ddk_archive = { path = "../archive" }
ddk_mempool = { path = "../mempool" }
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
