[package]
name = "plain_drivechain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plain_types = { path = "../types" }

base64 = "0.21.2"
hex = "0.4.3"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
jsonrpsee = { version = "0.18.2", features = ["client", "macros"] }
http = "0.2.9"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["sync"] }
