[package]
name = "ddk_mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
ddk_types = { path = "../types" }
serde = "1.0.164"
