[package]
name = "plain_miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plain_types = { path = "../types" }
plain_drivechain = { path = "../drivechain" }

jsonrpsee = { version = "0.18.2", features = ["client", "macros"] }
thiserror = "1.0.40"
hex = "0.4.3"
http = "0.2.9"
base64 = "0.21.2"
