[package]
name = "ddk_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddk_types = { path = "../types" }
ddk_archive = { path = "../archive" }
ddk_state = { path = "../state" }
ddk_mempool = { path = "../mempool" }
ddk_drivechain = { path = "../drivechain" }

quinn = "0.10.1"
rustls = { version = "0.21.1", features = ["dangerous_configuration"] }
thiserror = "1.0.40"
rcgen = "0.10.0"
anyhow = "1.0.71"
tokio = "1.28.2"
byteorder = "1.4.3"
bytes = "1.4.0"
serde = { version = "1.0.164", features = ["derive"] }
bincode = "1.3.3"
