[package]
name = "plain_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plain_net = { path = "../net" }
plain_archive = { path = "../archive" }
plain_types = { path = "../types" }
plain_state = { path = "../state" }
plain_mempool = { path = "../mempool" }
plain_drivechain = { path = "../drivechain" }

heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
thiserror = "1.0.40"
project-root = "0.2.2"
tokio = { version = "1.28.2", features = ["sync"] }
bincode = "1.3.3"
