[package]
name = "ddk_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddk_net = { path = "../net" }
ddk_archive = { path = "../archive" }
ddk_types = { path = "../types" }
ddk_state = { path = "../state" }
ddk_mempool = { path = "../mempool" }
ddk_drivechain = { path = "../drivechain" }

heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
thiserror = "1.0.40"
project-root = "0.2.2"
tokio = { version = "1.28.2", features = ["sync"] }
bincode = "1.3.3"
serde = { version = "1.0.164", features = ["derive"] }
tonic = "0.9.2"
prost = "0.11.9"
