[package]
name = "plain_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
plain_types = { path = "../types" }

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.4.0"
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
fake = "2.6.1"
rand = "0.7"

[[bench]]
name = "state"
harness = false
