[package]
name = "plain_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
bitcoin = { version = "0.30.0", features = ["serde"] }
bs58 = { version = "0.5.0", features = ["check"] }
blake3 = "1.4.0"
hex = "0.4.3"
bincode = "1.3.3"
thiserror = "1.0.42"
