[package]
name = "ddk_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddk_types = { path = "../types" }
ddk_authorization = { path = "../authorization" }

thiserror = "1.0.40"
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
ed25519-dalek-bip32 = "0.2.0"
bincode = "1.3.3"
serde = "1.0.164"
byteorder = "1.4.3"
